--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -37,14 +37,15 @@
     "raspberry-pi-pico.cmakePath": "${HOME}/.pico-sdk/cmake/v3.29.9/bin/cmake",
     "raspberry-pi-pico.ninjaPath": "${HOME}/.pico-sdk/ninja/v1.12.1/ninja",
     "files.associations": {
-        "*.sqlbook": "sql",
-        "*.ndjson": "jsonl",
         "*.dbclient-js": "javascript",
         "*.embeddedhtml": "html",
+        "*.sqlbook": "sql",
+        "*.ndjson": "jsonl",
         "globals.h": "c",
         "display.h": "c",
         "stdlib.h": "c",
         "pwm.h": "c",
-        "led.h": "c"
+        "led.h": "c",
+        "gpio.h": "c"
     }
 }
